tests/ui/offset-of/offset-of-dst-field.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/offset-of-dst-field.rs:13:5
   |
LL |     offset_of!(Foo, slice);
   |     ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
